--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="feed">Feed</string>
     <string name="back">Back</string>
     <string name="most_popular_last_week">Most Popular Last Week</string>
+    <string name="article">Article</string>
+    <string name="video">Video</string>
 </resources>
