--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -7,4 +7,5 @@
     <string name="most_popular_last_week">Most Popular Last Week</string>
     <string name="article">Article</string>
     <string name="video">Video</string>
+    <string name="publish_on">Published on  %s</string>
 </resources>
