--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -39,6 +39,7 @@
     <string name="please_pick_quote_type">Please Pick Quote Type</string>
     <string name="please_enter_content_url">Please Enter redirect Url</string>
     <string name="please_enter_image_url" > Please Enter Image Url</string>
-    <string name="favorite">favorite</string>
+    <string name="favorite">Favorite</string>
     <string name="sorry_nothing_found">Sorry, nothing found</string>
+    <string name="confirm_to_exit_app">Please click Back Again to exit app!</string>
 </resources>
