--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,6 @@
     <string name="skip">Skip</string>
     <string name="crawlData">Crawl Data</string>
     <string name="daily">Daily</string>
+    <string name="product_mode">Production Mode</string>
 
 </resources>
