--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -43,4 +43,5 @@
     <string name="sorry_nothing_found">Sorry, nothing found</string>
     <string name="confirm_to_exit_app">Please click Back Again to exit app!</string>
     <string name="daily">Daily</string>
+    <string name="quote">Quote</string>
 </resources>
