--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="facebook_app_id">836993843497246</string>
+    <string name="fb_login_protocol_scheme">fb836993843497246</string>
     <string name="app_name">Knowledge</string>
     <string name="home">Home</string>
     <string name="category">Category</string>
@@ -6,7 +8,7 @@
     <string name="app_version">App version</string>
 
     <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">"022eb08df0a690dd698c4f34e269c769"</string>
-    <string name="FACEBOOK_APP_ID" translatable="false">"320409838804774"</string>
+    <string name="FACEBOOK_APP_ID" translatable="false">36993843497246</string>
     <string name="post_now">Post Now</string>
     <string name="schedule">Schedule</string>
 
@@ -73,6 +75,13 @@
     <string name="confirm_to_exit_app">Please click Back Again to exit app!</string>
     <string name="daily">Daily</string>
     <string name="quote">Quote</string>
+    <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
+
+    <string name="share">Share</string>
+    <string name="view_source">View Source</string>
+    <string name="visit_source">Visit source</string>
+    <string name="detailed_description">Detailed Description</string>
 
 
 </resources>
